Attempt flexbox-fix for Safari and hide scrollbars in IE

--- a/css/app.css
+++ b/css/app.css
@@ -352,7 +352,7 @@ a.emphasis:hover, .text a:hover{
 
 /* TOPIC PAGINA */
 .fullflex .columns {
-	overflow-y: auto;
+	overflow: hidden;
 }
 
 .topic .fullflex{
@@ -874,15 +874,6 @@ b{
 
 .lightgrey{
     color: #d9d9d9;
-}
-
-.loader{
-    background: url(../img/loader_overlay_big.gif) no-repeat center center;
-    width: 100%;
-    height: 32px;
-    margin-bottom: 1rem;
-    width: 100%;
-    height: 100%;
 }
 
 .smallcaps{
